--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,6 @@
     font-family: "Poppins", sans-serif;
 }
 nav{
-    /* border:3px solid black; */
     padding: 20px 30px;
     display: flex;
     align-items: center;
@@ -37,23 +36,17 @@ nav>button{
 #form{
     border: 2px solid black;
     background-image: linear-gradient(to right, #4b2e59, #4c4a4a);
-    padding-left:50px ;
-    padding-right:50px ;
-    padding-top:50px ;
-    padding-bottom:50px ;
-    border-radius: 15px;
-    
-}
-#form>h1{
-
-    height: 60px;
+    padding:45px;
+    border-radius: 15px;   
+ }
+ #form>h1{
     display: grid;
-    place-items: center;
+    place-content: center;
+    height: 70px;
     color: royalblue;
-    
-}
+ }
 #form:hover{
-    box-shadow:black 7px 7px 15px;
+    box-shadow:-7px 7px 60px grey;
 }
 input{
     height: 40px;
@@ -109,11 +102,8 @@ main{
     display: grid;
     color: vo;
     grid-template-columns: repeat(3,1fr);
-    /* border: 4px solid red; */
     width: 100%;
-    /* height: 90vh; */
     gap: 50px;
-    /* gap: 1.5rem; */
     padding: 0 200px;
     padding-top: 40px;
 }
@@ -131,9 +121,6 @@ main{
     transition: ease;
     border: 1px solid royalblue;
     background-image:linear-gradient(rgb(111, 142, 235),skyblue);
-    /* background-image: linear-gradient(green,limegreen); */
-    /* background-image: linear-gradient(orange,yellow); */
-    /* background-image: linear-gradient(red,orange); */
 }
 #home_article:hover img{
     border: 2px solid royalblue;
@@ -173,4 +160,58 @@ button{
 #button_delete:hover{
     background-color: red;
 }
+
+/* ! View Employee */
+#view_parent{
+    border: 2px solid blue;
+    height: 100vh;
+    display: grid;
+    place-items: center;
+}
+#view_article{
+    border: 1px solid black;
+    border-radius: 18px;
+    height: 35vh;
+    width: 38vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 7px;
+    background: linear-gradient(to bottom, #B3E5FC, #C8E6C9);
+}
+#view_aside_one{
+    flex-basis: 40%;
+    border: 3px solid goldenrod;
+    height: 205px;
+    width: 195px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#view_aside_one>img{
+    border-radius: 50%;
+    margin: 12px;
+    height: 180px;
+    width: 200px;
+}
+#view_aside_two{
+    flex-basis: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2px;
+}
+hr{
+    border: 1px solid goldenrod;
+    width: 210px;
+}
+#view_aside_two>h1{
+    font-size: 25px;
+}
+#view_aside_two>h3{
+    font-weight:600;
+    color: green;
+}
+
 
